--- a/kafka/config/server.properties
+++ b/kafka/config/server.properties
@@ -24,7 +24,7 @@ broker.id=0
 auto.create.topics.enable=true
 
 # Switch to enable topic deletion or not, default value is false
-#delete.topic.enable=true
+delete.topic.enable=true
 
 ############################# Socket Server Settings #############################
 
@@ -52,10 +52,10 @@ num.network.threads=3
 num.io.threads=8
 
 # The send buffer (SO_SNDBUF) used by the socket server
-socket.send.buffer.bytes=102400
+socket.send.buffer.bytes=10240000
 
 # The receive buffer (SO_RCVBUF) used by the socket server
-socket.receive.buffer.bytes=102400
+socket.receive.buffer.bytes=10240000
 
 # The maximum size of a request that the socket server will accept (protection against OOM)
 socket.request.max.bytes=104857600
